@@ -11,7 +11,6 @@ from opengever.base.interfaces import IReferenceNumber
 from opengever.base.utils import ok_response
 from opengever.globalindex.model.task import Task
 from opengever.ogds.base.interfaces import ITransporter
-from opengever.ogds.base.utils import encode_after_json
 from opengever.ogds.base.utils import remote_request
 from opengever.tabbedview.helper import linked
 from opengever.task import _
@@ -189,7 +188,7 @@ class CompleteSuccessorTaskForm(Form):
 
         for doc_intid in formdata['documents']:
             doc = intids.getObject(int(doc_intid))
-            data['documents'].append(transporter._extract_data(doc))
+            data['documents'].append(transporter.extract(doc))
 
             # add a releation when a document from the dossier was selected
             if int(doc_intid) not in related_ids:
@@ -300,8 +299,8 @@ class CompleteSuccessorTaskReceiveDelivery(grok.View):
                 default=u'Document copied from task (task closed)')
 
         with CustomInitialVersionMessage(message, self.context.REQUEST):
-            for item in encode_after_json(data['documents']):
-                doc = transporter._create_object(self.context, item)
+            for item in data['documents']:
+                doc = transporter.create(item, self.context)
 
                 # append `RE:` prefix to the document title
                 doc.title = '%s: %s' % (
